--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
-
+spring.datasource.driver-class-name=org.sqlite.JDBC
+spring.datasource.url=jdbc:sqlite:send-money.db
+#spring.datasource.username=sa
+#spring.datasource.password=sa
+spring.jpa.database-platform=org.hibernate.dialect.SQLiteDialect
+spring.jpa.hibernate.ddl-auto=create-drop
+hibernate.show_sql=true
