Added get API call for available country

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,4 @@ spring.datasource.url=jdbc:sqlite:send-money.db
 spring.jpa.database-platform=org.hibernate.dialect.SQLiteDialect
 spring.jpa.hibernate.ddl-auto=create-drop
 hibernate.show_sql=true
+server.servlet.context-path=/v1
